# starlette-admin-demo

./: .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml  requirements.dev.txt  requirements.txt  seed.py
app/: common.py  config.py  helpers.py  main.py  seed.py
app/mongoengine/: __init__.py  fields.py  models.py  seed.py  views.py
app/odmantic/: __init__.py  models.py  seed.py  views.py
app/sqla/: __init__.py  auth.py  fields.py  models.py  seed.py  views.py
assets/seed/: blog.json  books.json  store.json
scripts/: format.sh
statics/js/: custom_render.js
templates/: index.html
templates/admin-mongo/: index.html
templates/admin-sqla/: home.html  post_detail.html
templates/admin/mongoengine/: index.html
templates/admin/odmantic/: index.html
templates/admin/sqla/: base.html  home.html  post_detail.html
